@@ -1156,6 +1156,9 @@
             }
             group.screens.push(this);
             this.tree_states_done = [];
+            this.views.map(function(view) {
+                view.reset();
+            });
             this.order = null;
             this.group = group;
             this.model = group.model;
@@ -1329,6 +1332,9 @@
         clear: function() {
             this.current_record = null;
             this.group.clear();
+            this.views.map(function(view) {
+                view.reset();
+            });
         },
         default_row_activate: function() {
             if ((this.current_view.view_type == 'tree') &&
